infrastructure/openshift/01-namespace-mesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opf-sandbox
  labels:
    istio-injection: enabled
