infrastructure/openshift/02-storage-ai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-vector
  namespace: opf-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-vector
  template:
    metadata:
      labels:
        app: postgres-vector
    spec:
      containers:
      - name: postgres-vector
        image: ankane/pgvector:v0.5.1
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-vector
  namespace: opf-sandbox
spec:
  ports:
  - port: 5432
  selector:
    app: postgres-vector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: opf-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:23.0.7
        args: ["start-dev"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: opf-sandbox
spec:
  ports:
  - port: 8080
  selector:
    app: keycloak
