infrastructure/openshift/03-temporal-kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temporal-server
  namespace: opf-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temporal-server
  template:
    metadata:
      labels:
        app: temporal-server
    spec:
      containers:
      - name: temporal-server
        image: temporalio/auto-setup:1.22.3
        ports:
        - containerPort: 7233
---
apiVersion: v1
kind: Service
metadata:
  name: temporal-server
  namespace: opf-sandbox
spec:
  ports:
  - port: 7233
  selector:
    app: temporal-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: opf-sandbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
      - name: kafka
        image: confluentinc/cp-kafka:7.4.0
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  namespace: opf-sandbox
spec:
  ports:
  - port: 9092
  selector:
    app: kafka-broker
