infrastructure/openshift/04-istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: opf-gateway
  namespace: opf-sandbox
spec:
  selector:
    istio: ingressgateway # use Istio default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-route
  namespace: opf-sandbox
spec:
  hosts:
  - "*"
  gateways:
  - opf-gateway
  http:
  - match:
    - uri:
        prefix: "/auth"
    route:
    - destination:
        host: keycloak
        port:
          number: 8080
